# claude-org-ja

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  worker_brief.toml
.claude/: settings.json
.curator/: CLAUDE.md
.dispatcher/: CLAUDE.md
.foreman/: CLAUDE.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.hooks/: block-aainc-structure.sh  block-dangerous-git.sh  block-dispatcher-out-of-scope.sh  block-foreground-subagent.sh  block-foreman-out-of-scope.sh  block-git-push.sh  block-no-verify.sh  block-org-structure.sh  block-workers-delete.sh  check-worker-boundary.sh  test-always-block.sh  test-block-dangerous-git.sh  test-block-workers-delete.sh  wezterm-cli.sh
ccmux-layouts/: ops.toml
dashboard/: app.js  index.html  org_state_converter.py  server.py  style.css
docker/: Dockerfile  Dockerfile.dockerignore  README.md  compose.docker-optin.yaml  compose.yaml  entrypoint.sh  install-herdr.sh  org-shell.sh
docs/: design-journal.md  getting-started.md  journal-events.md  non-goals.md  org-state-schema.md  oss-comparison.md  overview-business.md  overview-technical.md  sync-policy.md  testing.md  verification.md  worker-permissions-design.md
knowledge/: skill-candidates.md
notes/: README.md  broker-promotion-plan-586.md  broker-skill-gen-design-input.md  broker-skill-generator-design.md
registry/: dogfood_pending.md  org-config.md  projects.md
renga-layouts/: ops.toml
scripts/: install-hooks.sh  install.ps1  install.sh
tests/: __init__.py  run-all.sh  test-block-aainc-structure.sh  test-block-dispatcher-out-of-scope.sh  test-block-foreground-subagent.sh  test-block-foreman-out-of-scope.sh  test-block-git-push.sh  test-block-org-structure.sh  test-install-hooks.sh  (+30 more)
(+318 files in other folders)
