[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-org-ja"
version = "0.1.0"
description = "Claude Code multi-role AI organization harness (Japanese edition)"
readme = "README.md"
# CLAUDE.local.md worker template recommends Python 3.10; CI runs 3.11.
# tomli conditional below covers the 3.10 gap (tomllib is stdlib in 3.11+).
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "suisya-systems" }]
keywords = ["claude-code", "renga", "ai-agents", "multi-agent"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# Pins mirror requirements.txt — both files are kept in sync intentionally.
# requirements.txt remains as a thin pointer for tooling that still expects
# it (e.g. older external CI references); pyproject.toml is the canonical
# install path for `pip install -e .`. Pin windows are deliberately narrow
# pre-1.0; widening is Phase 5e+ scope per CLAUDE.local.md.
dependencies = [
    "core-harness>=0.3.2,<0.4",
    "claude-org-runtime>=0.1.1,<0.2",
    "tomli>=2.0,<3 ; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/suisya-systems/claude-org-ja"
Issues = "https://github.com/suisya-systems/claude-org-ja/issues"

# This repo is tooling, not an importable Python package: scripts under
# tools/ are invoked as `python tools/<name>.py`, not imported. Tell
# setuptools there are no modules to package so `pip install -e .` only
# resolves dependencies and registers the project metadata.
[tool.setuptools]
py-modules = []
